--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -82,7 +82,6 @@ allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
 allow 107.189.7.144;
-allow 107.189.7.168;
 allow 107.189.7.48;
 allow 107.189.8.133;
 allow 107.189.8.181;
@@ -91,6 +90,7 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
+allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -215,6 +215,7 @@ allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.237.23;
 allow 178.236.247.122;
+allow 178.30.130.195;
 allow 179.43.128.16;
 allow 179.43.134.18;
 allow 179.43.159.194;
@@ -617,6 +618,7 @@ allow 193.168.141.245;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
+allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
 allow 193.189.100.200;
@@ -645,6 +647,7 @@ allow 193.35.18.96;
 allow 193.35.18.98;
 allow 194.15.112.133;
 allow 194.15.113.118;
+allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.195.120.132;
 allow 194.26.192.64;
@@ -1385,6 +1388,7 @@ allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
+allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
@@ -1420,11 +1424,10 @@ allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.13.189.118;
-allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
+allow 34.225.188.209;
 allow 35.0.127.52;
-allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.187.5.192;
 allow 37.228.129.128;
@@ -1509,7 +1512,6 @@ allow 46.183.222.181;
 allow 46.183.222.183;
 allow 46.183.222.184;
 allow 46.183.222.185;
-allow 46.195.68.19;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1539,7 +1541,6 @@ allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.0.165.111;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
