--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -595,6 +595,7 @@ deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
+deny 2a0f:df00:0:255::197;
 deny 2a0f:df00:0:255::198;
 deny 2a0f:df00:0:255::199;
 deny 2a0f:df00:0:255::200;
