--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -82,7 +82,6 @@ set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
 set_real_ip_from 107.189.7.144;
-set_real_ip_from 107.189.7.168;
 set_real_ip_from 107.189.7.48;
 set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.181;
@@ -91,6 +90,7 @@ set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
+set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
@@ -215,6 +215,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.237.23;
 set_real_ip_from 178.236.247.122;
+set_real_ip_from 178.30.130.195;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.134.18;
 set_real_ip_from 179.43.159.194;
@@ -617,6 +618,7 @@ set_real_ip_from 193.168.141.245;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
+set_real_ip_from 193.189.100.197;
 set_real_ip_from 193.189.100.198;
 set_real_ip_from 193.189.100.199;
 set_real_ip_from 193.189.100.200;
@@ -645,6 +647,7 @@ set_real_ip_from 193.35.18.96;
 set_real_ip_from 193.35.18.98;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
+set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.195.120.132;
 set_real_ip_from 194.26.192.64;
@@ -1385,6 +1388,7 @@ set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
+set_real_ip_from 2a0f:df00:0:255::197;
 set_real_ip_from 2a0f:df00:0:255::198;
 set_real_ip_from 2a0f:df00:0:255::199;
 set_real_ip_from 2a0f:df00:0:255::200;
@@ -1420,11 +1424,10 @@ set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.189.118;
-set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.227;
+set_real_ip_from 34.225.188.209;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
@@ -1509,7 +1512,6 @@ set_real_ip_from 46.183.222.181;
 set_real_ip_from 46.183.222.183;
 set_real_ip_from 46.183.222.184;
 set_real_ip_from 46.183.222.185;
-set_real_ip_from 46.195.68.19;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1539,7 +1541,6 @@ set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.0.165.111;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
