--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -36,13 +36,6 @@ allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
-allow 2001:67c:289c::20;
-allow 2001:67c:289c:2::234;
-allow 2001:67c:289c:2::235;
-allow 2001:67c:289c::25;
-allow 2001:67c:289c:4::77;
-allow 2001:67c:289c:4::79;
-allow 2001:67c:289c:4::80;
 allow 2001:67c:6ec:203:192:42:116:173;
 allow 2001:67c:6ec:203:192:42:116:174;
 allow 2001:67c:6ec:203:192:42:116:175;
@@ -101,7 +94,15 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
+allow 2001:67c:89c:702:1ce:1ce:babe:1;
+allow 2001:67c:89c:702:1ce:1ce:babe:10;
+allow 2001:67c:89c:702:1ce:1ce:babe:2;
+allow 2001:67c:89c:702:1ce:1ce:babe:3;
+allow 2001:67c:89c:702:1ce:1ce:babe:5;
+allow 2001:67c:89c:702:1ce:1ce:babe:6;
+allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:634:2177::1;
@@ -138,12 +139,10 @@ allow 2603:3:6107:47a0::;
 allow 2603:3:610a:5050::;
 allow 2603:3:610c:7640::;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
-allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:2700:0:2:a800:ff:fe47:e25f;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -210,6 +209,7 @@ allow 2605:6400:30:f6b7::1337;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
+allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
@@ -379,7 +379,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:1::11;
