--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -27,12 +27,14 @@ set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
+set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.77.192;
 set_real_ip_from 104.244.77.208;
+set_real_ip_from 104.244.77.79;
 set_real_ip_from 104.244.77.80;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.233;
@@ -110,6 +112,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 124.217.247.210;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -123,6 +126,7 @@ set_real_ip_from 135.125.55.237;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.128.222.68;
 set_real_ip_from 138.201.203.206;
+set_real_ip_from 138.201.38.46;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 141.239.149.94;
@@ -173,13 +177,6 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
-set_real_ip_from 171.25.193.20;
-set_real_ip_from 171.25.193.234;
-set_real_ip_from 171.25.193.235;
-set_real_ip_from 171.25.193.25;
-set_real_ip_from 171.25.193.77;
-set_real_ip_from 171.25.193.79;
-set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.232.161.205;
 set_real_ip_from 172.232.161.206;
 set_real_ip_from 172.81.131.139;
@@ -212,7 +209,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.237.23;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 178.30.130.195;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.134.18;
 set_real_ip_from 179.43.159.194;
@@ -227,9 +223,9 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.233.135.135;
+set_real_ip_from 18.233.79.205;
 set_real_ip_from 184.105.48.40;
-set_real_ip_from 184.75.221.3;
+set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -248,6 +244,13 @@ set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.113.128.30;
+set_real_ip_from 185.129.61.1;
+set_real_ip_from 185.129.61.10;
+set_real_ip_from 185.129.61.2;
+set_real_ip_from 185.129.61.3;
+set_real_ip_from 185.129.61.5;
+set_real_ip_from 185.129.61.6;
+set_real_ip_from 185.129.61.7;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.44.108;
@@ -256,7 +259,6 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
-set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
@@ -671,6 +673,7 @@ set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.128.237;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
+set_real_ip_from 198.98.48.192;
 set_real_ip_from 198.98.48.20;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.49.203;
@@ -726,13 +729,6 @@ set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
-set_real_ip_from 2001:67c:289c::20;
-set_real_ip_from 2001:67c:289c:2::234;
-set_real_ip_from 2001:67c:289c:2::235;
-set_real_ip_from 2001:67c:289c::25;
-set_real_ip_from 2001:67c:289c:4::77;
-set_real_ip_from 2001:67c:289c:4::79;
-set_real_ip_from 2001:67c:289c:4::80;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:174;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:175;
@@ -791,7 +787,15 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:5;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -825,6 +829,7 @@ set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
+set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
@@ -926,12 +931,10 @@ set_real_ip_from 2603:3:6107:47a0::;
 set_real_ip_from 2603:3:610a:5050::;
 set_real_ip_from 2603:3:610c:7640::;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
-set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe47:e25f;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -998,6 +1001,7 @@ set_real_ip_from 2605:6400:30:f6b7::1337;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
+set_real_ip_from 2605:6400:30:f7ca::2;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
@@ -1168,7 +1172,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:1::11;
@@ -1418,6 +1421,7 @@ set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.189.118;
+set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.227;
 set_real_ip_from 35.0.127.52;
@@ -1506,6 +1510,7 @@ set_real_ip_from 46.183.222.181;
 set_real_ip_from 46.183.222.183;
 set_real_ip_from 46.183.222.184;
 set_real_ip_from 46.183.222.185;
+set_real_ip_from 46.195.71.68;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1526,7 +1531,6 @@ set_real_ip_from 51.222.84.46;
 set_real_ip_from 51.38.113.118;
 set_real_ip_from 51.38.81.135;
 set_real_ip_from 51.75.64.23;
-set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.4;
 set_real_ip_from 5.181.80.107;
