--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -36,13 +36,6 @@ set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
-set_real_ip_from 2001:67c:289c::20;
-set_real_ip_from 2001:67c:289c:2::234;
-set_real_ip_from 2001:67c:289c:2::235;
-set_real_ip_from 2001:67c:289c::25;
-set_real_ip_from 2001:67c:289c:4::77;
-set_real_ip_from 2001:67c:289c:4::79;
-set_real_ip_from 2001:67c:289c:4::80;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:174;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:175;
@@ -101,7 +94,15 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:5;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -138,12 +139,10 @@ set_real_ip_from 2603:3:6107:47a0::;
 set_real_ip_from 2603:3:610a:5050::;
 set_real_ip_from 2603:3:610c:7640::;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
-set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe47:e25f;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -210,6 +209,7 @@ set_real_ip_from 2605:6400:30:f6b7::1337;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
+set_real_ip_from 2605:6400:30:f7ca::2;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
@@ -379,7 +379,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:1::11;
