--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -560,7 +560,6 @@ allow 189.147.255.75;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
-allow 192.195.80.10;
 allow 192.210.255.181;
 allow 192.42.116.13;
 allow 192.42.116.14;
@@ -675,7 +674,7 @@ allow 195.80.151.30;
 allow 195.88.74.206;
 allow 196.189.30.114;
 allow 198.144.178.163;
-allow 198.167.193.136;
+allow 198.167.193.205;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -725,6 +724,7 @@ allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:801:2000::2b97;
 allow 2001:41d0:a:5c0::1;
+allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -1047,7 +1047,6 @@ allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:b500:408:3100::1;
 allow 2607:f530:8002::19;
-allow 2607:f598:b310:221:0:a:0:1;
 allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
@@ -1443,6 +1442,7 @@ allow 31.13.189.118;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
+allow 34.234.20.43;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
@@ -1558,8 +1558,8 @@ allow 5.182.86.212;
 allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
+allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1587,7 +1587,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.156.16.216;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1697,6 +1696,7 @@ allow 89.58.41.156;
 allow 89.58.41.251;
 allow 89.58.63.200;
 allow 91.132.144.59;
+allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.5.115;
 allow 91.203.5.118;
