--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -192,6 +192,7 @@ allow 172.81.131.84;
 allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
+allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.255.215;
 allow 175.214.127.6;
@@ -873,7 +874,6 @@ allow 23.137.249.150;
 allow 23.137.249.185;
 allow 23.137.249.227;
 allow 23.137.249.240;
-allow 23.137.249.62;
 allow 23.137.249.8;
 allow 23.137.250.34;
 allow 23.137.251.61;
@@ -932,7 +932,6 @@ allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:96f9::1;
-allow 2602:fc24:11:a8b4::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:77c0::1;
@@ -1418,6 +1417,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
@@ -1442,7 +1442,6 @@ allow 31.13.189.118;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
-allow 34.234.20.43;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
@@ -1559,6 +1558,7 @@ allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.200.170.41;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1709,6 +1709,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
