--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -696,7 +696,6 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
-allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -707,6 +706,7 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -1353,8 +1353,10 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
+allow 2a12:5940:1182::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:4462::2;
@@ -1378,7 +1380,7 @@ allow 31.13.189.118;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
-allow 3.209.246.117;
+allow 3.225.28.196;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
@@ -1479,7 +1481,6 @@ allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
 allow 51.159.211.57;
-allow 51.195.166.190;
 allow 51.195.91.124;
 allow 51.222.142.67;
 allow 51.222.84.46;
@@ -1488,7 +1489,6 @@ allow 51.38.81.135;
 allow 51.75.64.23;
 allow 51.81.222.62;
 allow 51.81.254.14;
-allow 51.81.254.4;
 allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.138.51;
@@ -1543,7 +1543,6 @@ allow 62.182.84.146;
 allow 64.5.123.66;
 allow 66.146.193.33;
 allow 66.220.242.222;
-allow 66.85.26.248;
 allow 67.219.109.141;
 allow 70.53.133.193;
 allow 71.19.144.106;
@@ -1569,6 +1568,7 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.195.103;
+allow 79.137.196.72;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1594,6 +1594,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.247.165.53;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
@@ -1637,6 +1638,7 @@ allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.5.115;
 allow 91.203.5.118;
+allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
@@ -1645,6 +1647,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
@@ -1654,7 +1657,6 @@ allow 92.205.163.226;
 allow 92.205.185.52;
 allow 92.205.237.227;
 allow 92.205.31.137;
-allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
